# tiny-cloud

./: .gitignore  Cargo.toml  build.rs
.github/: dependabot.yml
assets/: login.css  login.html  login.js
assets/images/: tiny-cloud-logo-proj.xcf
assets/webfiles/: global.css
html/: login.html
src/: api.rs  auth.rs  config.rs  encryption.rs  logging.rs  macros.rs  main.rs  plugins.rs  tests.rs  tls.rs  utils.rs  web_ui.rs  webui.rs
src/api/: auth.rs  macros.rs  plugins.rs
src/auth/: auth.rs  cli.rs  database.rs  error.rs  hash.rs
src/webui/: home.rs  images.rs  login.rs  macros.rs
