[package]
name = "tiny-cloud"
authors = ["hex0x0000 <hex0x0000@protonmail.com>"]
description = "Fast, lightweight, self-hosted, KISS (Keep It Simple, Stupid) personal cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29", features = [ "sync", "fs", "parking_lot" ] }
actix-web = { version = "4", features = [ "secure-cookies", "openssl" ] }
actix-session = { version = "0.9", features = [ "cookie-session" ] }
actix-identity = "0.7"
openssl = "0.10"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = [ "derive" ] }
anyhow = "1"
num_cpus = "1"
thiserror = "1"
argon2 = "0.5"
rand_core = "0.6"
zeroize = { version = "1.6", features = [ "zeroize_derive" ] }
rpassword = "7"
maud = { version = "0.26", features = [ "actix-web" ] }
async-sqlite = "0.2"
mutually_exclusive_features = "0.1"

# Logging
log = "0.4"
simplelog = { version = "0.12", optional = true }
syslog = { version = "6", optional = true }
systemd-journal-logger = { version = "2", optional = true }

# Plugins
tcloud-library = { path = "../tcloud-library" }
tcloud-archive = { path = "../tcloud-archive", optional = true }

[features]
default = [ "archive", "normal-log" ]

# Logging
normal-log = [ "dep:simplelog" ]
syslog = [ "dep:syslog" ]
systemd-log = [ "dep:systemd-journal-logger" ]

# Plugins
archive = [ "dep:tcloud-archive" ]

[build-dependencies]
minify-js = "0.6.0"
lightningcss = "1.0.0-alpha.52"

