[package]
name = "tiny-cloud"
authors = ["hex0x0000 <hex0x0000@protonmail.com>"]
description = "Fast, lightweight, self-hosted, KISS (Keep It Simple, Stupid) personal cloud"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.29", features = [ "sync", "fs", "parking_lot" ] }
actix-web = { version = "4", features = [ "secure-cookies" ] }
actix-session = { version = "0.9", features = [ "cookie-session" ] }
actix-identity = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = [ "derive" ] }
num_cpus = "1"
thiserror = "1"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1.6", features = [ "zeroize_derive" ] }
rpassword = "7"
maud = { version = "0.26", features = [ "actix-web" ] }
async-sqlite = { version = "0.2", default-features = false }
mutually_exclusive_features = "0.1"

# Common library
tcloud-library = { path = "../tcloud-library" }

# Logging
log = "0.4"
simplelog = { version = "0.12", optional = true }
syslog = { version = "6", optional = true }
systemd-journal-logger = { version = "2", optional = true }

# TLS
openssl = { version = "0.10", optional = true }
rustls = { version = "0.22", optional = true }
rustls-pemfile = { version = "2", optional = true }

# Plugins
tcloud-archive = { path = "../tcloud-archive", optional = true }

[features]
#default = [ "normal-log", "rustls", "archive" ]
default = [ "normal-log", "no-tls", "archive" ]

# Logging
normal-log = [ "dep:simplelog" ]
syslog = [ "dep:syslog" ]
systemd-log = [ "dep:systemd-journal-logger" ]

# TLS
no-tls = []
openssl = [ "dep:openssl", "actix-web/openssl" ]
rustls = [ "dep:rustls-pemfile", "dep:rustls", "actix-web/rustls-0_22" ]

# Database
sqlite-bundled = [ "async-sqlite/bundled" ]

# Authentication
totp-auth = []

# Plugins
archive = [ "dep:tcloud-archive" ]

[build-dependencies]
minifier = "0.3"

